Fixed spacing at end of list by replacing margin with border

--- a/themes/Stahleck-2017/theme.css
+++ b/themes/Stahleck-2017/theme.css
@@ -10,7 +10,13 @@ h1 {
   background-repeat: no-repeat;
   background-size: contain;
 }
-.pairings > li {
+.pairings > li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
   box-shadow: .1rem .1rem .2rem rgba(0, 0, 0, 1);
   border-radius: .2rem;
 }
